MakeCatalog: automatically find total number of clumps if necessary
Until now, MakeCatalog would use the `NUMLABS' keyword in the clumps
catalog to find the total number of clumps before parsing the dataset. This
was very inconvenient when we used clump labels that were not (directly)
created by Segment.

With this commit, when `NUMLABS' is not present, MakeCatalog will parse the
clumps and objects datasets and count the total number of clumps in all the
objects while also re-labeling the clumps dataset (and saving the relabeled
image).

--- a/NEWS
+++ b/NEWS
@@ -78,6 +78,12 @@ See the end of the file for license conditions.
      `sigclip-mean' and `sigclip-std') return 32-bit floating point
      datasets
 
+  MakeCatalog:
+   - When a clumps catalog is requested, MakeCatalog will automatically
+     deduce the total number of clumps (at a small cost in
+     performance). Until now, it was mandatory for the clumps label dataset
+     to contain the total number of clumps in the `NUMLABS' keyword.
+
   Library:
    - gal_statistics_outlier_flat_cfp: Improved implementation with new API.
 
