Fits: --primaryimghdu allows copying/cutting to zero-th extension
Until now, it wasn't easy to copy a requested extension to the zero-th
extension of a FITS file. With this commit, the Fits program has a new
`----primaryimghdu' option which will copy the requested image HDU into the
zero-th extension of an output file that doesn't yet exist.

This task was suggested by Zahra Bagheri.

--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,10 @@ See the end of the file for license conditions.
    --usedredshift: Print the used redshift as a "Specific calculation" (in
      line with other single-valued calculations).
 
+  Fits:
+   --primaryimghdu: Copy/cut the given image HDU to the zero-th/first
+     HDU of the output file that doesn't yet exist.
+
   Statistics:
    --sigclip-number, --sigclip-median, --sigclip-mean, --sigclip-std: Do
      sigma-clipping and only print the desired value as a single-value
