--- a/NEWS
+++ b/NEWS
@@ -100,6 +100,7 @@ See the end of the file for license conditions.
   bug #56299: CosmicCalculator fails at z=0.
   bug #56324: Column metadata not usable when input is from pipe/stdin.
   bug #56424: Warp crashes with empty string given to options.
+  bug #56480: Segfault in statistics library's histogram function.
 
 
 
